2005-05-12  Carol Spears <carol@gimp.org>
	* examples/glowing_steel: changed deprecated pdb calls. 
	* examples/glowing_steel: even though Procedure Browser reports mblur needing only
          optional center_x and center_y FLOAT, it complains and stops unless it gets them.
          I fed 0,0 to the script. 

2005-04-03  Carol Spears <carol@gimp.org>
	* examples/burst: changed deprecated pdb calls. 
	* examples/sethspin: changed deprecated pdb calls, including changing
          gimp-rotate to a much longer name that also wanted new information and
          in a different order.  removed the -1 to the progress_init to stop those
          pop-ups. 

2004-07-30  Seth Burgess <sjburges@gimp.org>
	* Gimp/Lib.xs: fixup longstanding bug of not being able to 
	               use RUN_NONINTERACTIVE
	* t/run.t: reenabled the test that uses this

2004-07-21  Seth Burgess <sjburges@gimp.org>
	* TODO: added some items
	* Gimp.pm: pod cleanup and reorg
	* Gimp/Fu.pm: bit of pod cleanup

2004-06-28  Seth Burgess <sjburges@gimp.org>
	* UI/UI.xs: fixed an XS error that shows up for GCC 2.95; 
          shouldn't create a temp variable in CODE: - put it in PREINIT:
          Reported by Marc 'HE' Brockschmidt <he@debian.org>.
          Fixed a typo in GradientSelect.
        
        * examples/burst: s/undo_push/undo
       

2004-04-17  Seth Burgess <sjburges@gimp.org>
	* updated TODO for suggestion in bug 117349

2004-04-17  Seth Burgess <sjburges@gimp.org>
	* added patch from Carol Spears, bug #100356.  Technically, this is
	  breaking the API after the release, but I really doubt many people
	  are calling colorhtml all that much.

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* Made 2.0 release.

        * Gimp.pm 
        * Changes: updated docs to reflect

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* examples/fade-alpha: s/RADIAL/GRADIENT_RADIAL/ fixes bug #141444
        * examples/selective_sharpen: change threshold to be zero based, fix 